<?xml version="1.0" encoding="utf-8" ?>
<resources>
  <string name="app_name">51GameCenterSDK</string>
  <string name="package_name">com.fiveone.gamecenter.sdk</string>
  <string name="DW4_string_0">注 册</string>
  <string name="DW4_string_1">账　号:</string>
  <string name="DW4_string_2">请输入账号</string>
  <string name="DW4_string_3">密　码:</string>
  <string name="DW4_string_4">请输入密码</string>
  <string name="DW4_string_5">确 定</string>
  <string name="DW4_string_6">返 回</string>
  <string name="DW4_string_7">修改密码</string>
  <string name="DW4_string_8">账　号:</string>
  <string name="DW4_string_9">请输入旧账号</string>
  <string name="DW4_string_10">旧密码:</string>
  <string name="DW4_string_11">请输入旧密码</string>
  <string name="DW4_string_12">新密码:</string>
  <string name="DW4_string_13">请输入新密码</string>
  <string name="DW4_string_14">确 认</string>
  <string name="DW4_string_15">返 回</string>
  <string name="DW4_string_16">账号注册</string>
  <string name="DW4_string_17">请输入账号</string>
  <string name="DW4_string_18">请输入密码</string>
  <string name="DW4_string_19">一键注册登录</string>
  <string name="DW4_string_20">登录游戏</string>
  <string name="DW4_string_21">注册账号</string>
  <string name="DW4_string_22">登 录</string>
  <string name="DW4_string_23">请输入账号</string>
  <string name="DW4_string_24">请输入密码</string>
  <string name="DW4_string_25">修改密码</string>
  <string name="DW4_string_26">注册账号</string>
  <string name="DW4_string_27">登录游戏</string>
</resources>