<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout android:id="@+id/inner_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/gamecenter_layout_bg" android:gravity="center" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/gamecenter_input_bg">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="15dp" android:orientation="horizontal">
      <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/gamecenter_51logo"/>
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:textColor="@color/TextColorBlue" android:textSize="18dp" android:text="@string/DW4_string_0"/>
    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginLeft="25dp" android:layout_marginRight="25dp">
      <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/gamecenter_public_text_bg" android:orientation="horizontal" android:layout_marginTop="20dp">
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:textColor="@color/TextColorBlack" android:text="@string/DW4_string_1" android:textSize="15dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <EditText android:id="@+id/login_username_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_gravity="center_vertical" android:layout_weight="1" android:background="@android:color/transparent" android:hint="@string/DW4_string_2" android:imeOptions="actionDone" android:inputType="textPersonName" android:maxLength="16" android:singleLine="true" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:textSize="15dp"/>
      </LinearLayout>
      <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:background="@drawable/gamecenter_public_text_bg" android:orientation="horizontal">
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:textColor="@color/TextColorBlack" android:text="@string/DW4_string_3" android:textSize="15dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <EditText android:id="@+id/login_password_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_weight="1" android:background="@android:color/transparent" android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|\" android:hint="@string/DW4_string_4" android:maxLength="16" android:singleLine="true" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:textSize="15dp"/>
      </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_marginTop="15dp" android:orientation="horizontal">
      <Button android:id="@+id/register_login_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:background="@color/gamecenter_green_btn_selector" android:focusable="false" android:textColor="@color/TextColorWhite" android:text="@string/DW4_string_5"/>
      <Button android:id="@+id/register_back_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:background="@color/gamecenter_blue_btn_selector" android:focusable="false" android:textColor="@color/TextColorWhite" android:text="@string/DW4_string_6"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>