<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout android:id="@+id/inner_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/gamecenter_layout_bg" android:gravity="center" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:background="@drawable/gamecenter_input_bg" android:orientation="vertical">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="15dp" android:orientation="horizontal">
      <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/gamecenter_51logo"/>
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:text="@string/DW4_string_22" android:textColor="@color/TextColorBlue" android:textSize="18dp"/>
    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:orientation="vertical">
      <RelativeLayout android:id="@+id/login_accountedit_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="8dp">
        <EditText android:id="@+id/login_account_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:background="@drawable/gamecenter_public_text_bg" android:hint="@string/DW4_string_23" android:imeOptions="actionDone" android:maxLength="16" android:singleLine="true" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:textSize="15dp"/>
        <Button android:id="@+id/login_arrow_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginRight="5dp" android:background="@drawable/gamecenter_arrow"/>
      </RelativeLayout>
      <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="8dp" android:orientation="horizontal">
        <EditText android:id="@+id/login_password_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_weight="1" android:background="@drawable/gamecenter_public_text_bg" android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@-_#@`~,.?/|\" android:hint="@string/DW4_string_24" android:imeOptions="actionDone" android:maxLength="16" android:singleLine="true" android:textColor="@android:color/black" android:textColorHint="@color/TextColorHint" android:textSize="15dp"/>
      </LinearLayout>
      <Button android:id="@+id/login_changepwd_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="right" android:text="@string/DW4_string_25" android:textColor="@color/TextColorBlue" android:layout_marginTop="8dp" android:layout_marginRight="25dp" android:background="@android:color/transparent"/>
      <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginTop="8dp" android:orientation="horizontal">
        <Button android:id="@+id/login_register_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:background="@color/gamecenter_green_btn_selector" android:text="@string/DW4_string_26" android:textColor="@color/TextColorWhite"/>
        <Button android:id="@+id/login_login_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:background="@color/gamecenter_blue_btn_selector" android:focusable="false" android:text="@string/DW4_string_27" android:textColor="@color/TextColorWhite"/>
      </RelativeLayout>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>